# lily-books

./: .cleanup_books.sh  .gitignore  COMPREHENSIVE_REVIEW_ANALYSIS.md  DRAFT2DIGITAL_QUICKSTART.md  FINAL_QUALITY_REPORT.md  MEMORY_BANK.md  PUBLISHING_GUIDE.md  PUBLISHING_IMPLEMENTATION.md  README.md  TEST_RESULTS_PUBLISHING.md  claude.md  env.example  pyproject.toml  sitecustomize.py  test_pipeline.py
.archive/: ADDITIONAL_FIXES_2025-01-20.md  COVER_GENERATION_FIX.md  FIXES_APPLIED.md  TEST_RESULTS.md
.claude/agents/: README.md  audio-production.md  epub-covers.md  langgraph-pipeline.md  llm-chains.md  publishing.md  qa-validation.md  testing.md
.claude/commands/: audio-production.md  epub-covers.md  langgraph-pipeline.md  llm-chains.md  publishing.md  qa-validation.md  testing.md
MEMORY_BANK/: ARCHITECTURE_DECISIONS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LLM_DRIVEN_IMPLEMENTATION.md  MEMORY_BANK.md  README.md  TECHNICAL_SPECIFICATION.md
docs/: COST_ESTIMATION.md  PUBLISHDRIVE_QUICKSTART.md  QA_CRITERIA.md
docs/agents/: AGENT_DEVELOPMENT_GUIDE.md  AGENT_TESTING.md
docs/implementation/: DEBUG_LANGFUSE_INTEGRATION.md  (+1 more)
tests/: conftest.py  test_agents.py  test_async_pipeline.py  test_basic.py  test_chains.py  test_d2d_integration.py  test_epub_validation.py  test_full_pipeline.py  test_graph_nodes.py  test_llm_driven_validation.py  test_minimal_pipeline.py  test_models.py  test_publishing.py  test_quality_gates.py  test_self_healing_retry.py  test_soft_validation.py  test_tools.py  test_utils.py  test_working_pipeline.py
tools/: run_tests.py
(+51 files in other folders)
