[tool.poetry]
name = "lily-books"
version = "0.1.0"
description = "LangChain/LangGraph pipeline for public-domain book modernization"
authors = ["Damon DeCrescenzo <damon@example.com>"]
readme = "README.md"
packages = [{include = "lily_books", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langgraph = "^0.6.0"
langgraph-checkpoint-sqlite = "^2.0.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langfuse = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
tiktoken = "^0.7.0"
tenacity = "^8.0.0"
pyyaml = "^6.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
textstat = "^0.7.0"
ebooklib = "^0.18"
lxml = "^4.9.0"
elevenlabs = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

